# dotfiles_custom

./: README.md  aliases.sh  black.vim  coffee.vim  colorscheme-hybrid-plugin.vim  colorscheme-solarized-plugin.vim  colorscheme.vim  cursor.vim  custom-colorscheme.vim  custom-hub-completions.sh  custom-hub-completions.sh.bak  custom-keymaps.vim  elixir.vim  get-zsh-completions.bak  git-diff.sh  gitconfig  gray.tmuxtheme  hardtime.vim  html.vim  javascript.vim  knights_color.vim  molokai.vim  monokai-plugin.vim  polyglot-plugin.vim  pyenv.sh  pyproject.toml  python-syntax-highlight-all.vim  python.vim  quote.vim  shell-enhancements.sh  snip-link.sh  snip-link.vim  startify.vim  surround-plugin.vim  syntaxhelper.vim  tigrc  tmux.conf  vim-256-colorschemes-plugin.vim  vim-easymotion-plugin.vim  vim-hardtime-plugin.vim  (+3 more)
claude-context-monitor/: README.md  context-monitor.js  statusline.js
custom-snips/: coffee.snippets
gh/: hosts.yml
ghostty/: config
iterm_config/: com.googlecode.iterm2.plist
karabiner/: karabiner.json
